Image Croppinf Done

--- a/store/templates/store/signup.html
+++ b/store/templates/store/signup.html
@@ -70,7 +70,7 @@
 							<button type="submit" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04 ">Submit</button>
 
 						</div>
-						<div>
+						{% comment %} <div>
 							{% if messages %}
 								{% for message in messages %}
 									<div class="alert alert-success" role="alert">
@@ -78,7 +78,7 @@
 									</div>
 								{% endfor %}
 							{% endif %}
-						</div>
+						</div> {% endcomment %}
 						
 						<div >
 							<h5 class=" text-success mt-3">
