--- a/storeadmin/templates/storeadmin/categories/editcategories.html
+++ b/storeadmin/templates/storeadmin/categories/editcategories.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form class="p-5" method="POST" action=""> {% csrf_token %}
+<form class="p-5" method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
           
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
@@ -10,6 +10,17 @@
       <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter username">
       <label for="username">Quantity</label>
       <input value="{{obj.noofitems}}" name="noofitems" type="number" class="form-control" id="username" placeholder="Enter username">
+
+      <div class="form-group mt-2">
+
+        <label for="image">Image</label>
+        <input name="image" type="file" class="form-control-file" id="image">
+        
+        <img  src="{{ obj.image.url }}" alt="{{ obj.title }}">
+        
+      </div>
+
+
     </div>
     <button type="submit" class="btn btn-primary mt-4">Update</button>
     <h5> {{error}}</h5>
@@ -20,7 +31,7 @@
 
 
 
-
+  <script defer src="https://cdn.crop.guide/loader/l.js?c=ZXDVHR"></script>
 
 
 {% endblock content %}
