--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -405,9 +405,9 @@
 				<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
 					<!-- Block1 -->
 					<div class="block1 wrap-pic-w ">
-						<img class="" src="{% static 'store/images/skateboardcategnew.jpg' %}" alt="IMG-BANNER">
+						<img class="" src="{{item.image.url}}" alt="IMG-BANNER">
 
-						<a href="product.html" class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
+						<a href={% url 'category_based_product' item.id %} class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
 							<div class="block1-txt-child1 flex-col-l">
 								<span class="block1-name ltext-102 trans-04 p-b-8">
 									{{item.name}}
