--- a/store/templates/store/product.html
+++ b/store/templates/store/product.html
@@ -261,9 +261,10 @@
 								<span class="stext-105 cl3">
 									{{item.price}}
 								</span>
-								<a href={% url 'buynow' item.id %}>
+								{% comment %} <a href={% url 'buynow' item.id %}>
 									Buy it
-								</a>
+								</a> {% endcomment %}
+								<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
 							</div>
 					
 							<div class="block2-txt-child2 flex-r p-t-3">
