--- a/store/templates/store/userdashboard/loggedinproduct.html
+++ b/store/templates/store/userdashboard/loggedinproduct.html
@@ -284,22 +284,28 @@
 			<div class="header-cart-content flex-w js-pscroll">
 				<ul class="header-cart-wrapitem w-full">
 					<li class="header-cart-item flex-w flex-t m-b-12">
+						{% for item in cartobjs %}
+
 						<div class="header-cart-item-img">
-							<img src="images/item-cart-01.jpg" alt="IMG">
+							<img src={{item.product.image1.url}} alt="IMG">
 						</div>
 
 						<div class="header-cart-item-txt p-t-8">
 							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-								White Shirt Pleat
+								{{item.product.name}}
 							</a>
 
 							<span class="header-cart-item-info">
-								1 x $19.00
+								{{item.quantity}} x Rs. {{item.product.price}}
 							</span>
 						</div>
+						
+						
+						{% endfor %}
+						
 					</li>
 
-					<li class="header-cart-item flex-w flex-t m-b-12">
+					{% comment %} <li class="header-cart-item flex-w flex-t m-b-12">
 						<div class="header-cart-item-img">
 							<img src="{% static 'store/images/item-cart-02.jpg' %}" alt="IMG">
 						</div>
@@ -329,12 +335,12 @@
 								1 x $17.00
 							</span>
 						</div>
-					</li>
+					</li> {% endcomment %}
 				</ul>
 				
 				<div class="w-full">
 					<div class="header-cart-total w-full p-tb-40">
-						Total: $75.00
+						Total: {{totalsum}}
 					</div>
 
 					<div class="header-cart-buttons flex-w w-full">
@@ -605,8 +611,8 @@
 									Buy it
 								</a> {% endcomment %}
 								
-								<a href={% url 'preview' item.id %}>Preview</a>
-								<a href={% url 'addtocart' item.id %}> Add to Cart</a>
+								<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+								
 								{% comment %} <button type="button" class="addit" data-toggle="modal" data-target="#myModal" data-category-id="{{ item.id }}">Add to Cart</button> {% endcomment %}
 
 									<!-- Modal -->
