--- a/store/templates/store/userdashboard/preview.html
+++ b/store/templates/store/userdashboard/preview.html
@@ -32,7 +32,7 @@
                                 <div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
                                 <div class="slick3 gallery-lb">
-                                    <div class="item-slick3" data-thumb="images/product-detail-01.jpg">
+                                    <div class="item-slick3" data-thumb="{{pdtobj.image1.url}}" >
                                         <div class="wrap-pic-w pos-relative">
                                             <img src="{{pdtobj.image1.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image1.url}}" id="zoom1">
 
@@ -42,9 +42,9 @@
                                         </div>
                                     </div>
 
-                                    <div class="item-slick3" data-thumb="images/product-detail-02.jpg">
+                                    <div class="item-slick3" data-thumb="{{pdtobj.image2.url}}">
                                         <div class="wrap-pic-w pos-relative">
-                                            <img src="{{pdtobj.image2.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image2.url}}" id="zoom2">
+                                            <img src="{{pdtobj.image2.url}}" alt="IMG-PRODUCT" >
 
                                             <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-02.jpg">
                                                 <i class="fa fa-expand"></i>
@@ -52,9 +52,9 @@
                                         </div>
                                     </div>
 
-                                    <div class="item-slick3" data-thumb="images/product-detail-03.jpg">
+                                    <div class="item-slick3" data-thumb="{{pdtobj.image3.url}}">
                                         <div class="wrap-pic-w pos-relative">
-                                            <img src="{{pdtobj.image3.url}}" alt="IMG-PRODUCT" data-zoom-image="{{pdtobj.image3.url}}" id="zoom3">
+                                            <img src="{{pdtobj.image3.url}}" alt="IMG-PRODUCT" >
 
                                             <a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="images/product-detail-03.jpg">
                                                 <i class="fa fa-expand"></i>
@@ -194,7 +194,7 @@
 
 
 <script>
-    $("#zoom1, #zoom2, #zoom3").elevateZoom();
+    $("#zoom1").elevateZoom();
 </script>
 
 
