--- a/storeadmin/templates/storeadmin/categories/addcategories.html
+++ b/storeadmin/templates/storeadmin/categories/addcategories.html
@@ -1,6 +1,6 @@
 {% extends 'storeadmin/index.html' %}
 {% block content %}
-<form class="p-5" method="POST" action=""> {% csrf_token %}
+<form class="p-5" method="POST" action="" enctype="multipart/form-data"> {% csrf_token %}
           
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
@@ -8,12 +8,24 @@
       <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter username">
       <label for="username">Quantity</label>
       <input value="{{obj.noofitems}}" name="quantity" type="number" class="form-control" id="username" placeholder="Enter username">
+
+      <div class="mb-3">
+        <label for="image">Image</label>
+        <div class="card-img-top">
+         
+        </div>
+        <input type="file" class="form-control" id="image" name="image" accept="image/*">
+      </div>
+
+
     </div>
     <button type="submit" class="btn btn-primary mt-4">Add</button>
     <h5> {{error}} {{duplicate}}</h5>
     {% comment %} {% endfor %} {% endcomment %}
   
   </form> 
+
+  <script defer src="https://cdn.crop.guide/loader/l.js?c=ZXDVHR"></script>
 
 
 
