--- a/storeadmin/templates/storeadmin/categories/addcategories.html
+++ b/storeadmin/templates/storeadmin/categories/addcategories.html
@@ -5,7 +5,11 @@
     <div class="form-group mt-2">
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="username">Category Name</label>
-      <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter username">
+      <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter Category">
+
+
+
+
       <label for="username">Quantity</label>
       <input value="{{obj.noofitems}}" name="quantity" type="number" class="form-control" id="username" placeholder="Enter username">
 
