--- a/storeadmin/templates/storeadmin/categories/editcategories.html
+++ b/storeadmin/templates/storeadmin/categories/editcategories.html
@@ -8,8 +8,15 @@
       {% comment %} {% for item in content  %} {% endcomment %}
       <label for="username">Category Name</label>
       <input value="{{obj.name}}" name="name" type="text" class="form-control" id="username" placeholder="Enter username">
-      <label for="username">Quantity</label>
+
+ 
+      <div>
+
+        <label for="username">Quantity</label>
       <input value="{{obj.noofitems}}" name="noofitems" type="number" class="form-control" id="username" placeholder="Enter username">
+
+      </div>
+      
 
       <div class="form-group mt-2">
 
