--- a/storeadmin/templates/storeadmin/products/products.html
+++ b/storeadmin/templates/storeadmin/products/products.html
@@ -50,7 +50,7 @@
             <td>{{ item.name }}</td>
             <td>{{ item.price }}</td>
             <td>{{ item.quantity }}</td>
-            <td>{{ item.category.id }}</td>
+            <td>{{ item.category.name }}</td>
             <td>{{ item.description }}</td>
             <td><img src="{{ item.image1.url }}" alt=""></td>
             <td>
