--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -34,9 +34,24 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
+
+
+	{% comment %} bootstrap js cdn {% endcomment %}
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+	
+	
+	
 	
 <!--===============================================================================================-->
 	{% block head %}	{% endblock head %}	
+
+	<style>
+
+		{% block style %}{% endblock style %}
+
+	</style>
+	
 </head>
 <body class="animsition">
 	
@@ -133,6 +148,12 @@
                         <a href={% url 'logout' %}>
                             <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 bg-danger">
                                 Logout
+                            </button>
+
+                        </a>
+						<a href={% url 'userprofile' %}>
+                            <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04 bg-danger">
+                                User
                             </button>
 
                         </a>
@@ -451,6 +472,7 @@
 		<div class="container">
 			<div class="row">
 				{% for item in category  %}
+				{% if not item.isblocked %}
 				<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
 					<!-- Block1 -->
 					<div class="block1 wrap-pic-w ">
@@ -475,6 +497,7 @@
 						</a>
 					</div>
 				</div>
+				{% endif %}
 				{% endfor %}
 
 				{% comment %} <div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
