--- a/storeadmin/templates/storeadmin/categories/categories.html
+++ b/storeadmin/templates/storeadmin/categories/categories.html
@@ -2,10 +2,7 @@
 
 {% block content %}
 
-{% block metacontent %}
-{% comment %} <meta name="csrf-token" content="{{ csrf_token }}"> {% endcomment %}
 
-{% endblock metacontent %}
 <div class="container">
   <div class="row justify-content-end">
     <a href="{% url 'admin_addcategories' %}">
@@ -18,7 +15,7 @@
         <tr>
           <th>Category</th>
           <th>Edit</th>
-          <th>Delete</th>
+          <th>Block</th>
         </tr>
       </thead>
       <tbody>
@@ -38,8 +35,22 @@
           </td>
           <td class="py-1">
           
+            {% if item.isblocked %}
+
+              <button  type="button " class="btn delete-btn btn-success" data-category-id="{{ item.id }}">Unblock</button>
+
               
-            <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Delete</button>
+            
+            {% endif %}  
+
+            {% if not item.isblocked %}
+
+            <button  type="button" class="btn delete-btn btn-danger" data-category-id="{{ item.id }}">Block</button>
+            
+            
+            
+            {% endif %}
+            
 
             
 
@@ -66,7 +77,7 @@
 
   $(".delete-btn").click(function() {
     var categoryId = $(this).data("category-id");
-    if (confirm("Are you sure you want to delete this category?")) {
+    if (confirm("Are you sure you want to block this category?")) {
         
         $.ajax({
             url: "/storeadmin/deletecategories/" + categoryId + "/",
