--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -354,12 +354,12 @@
            
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-              <i class="icon-head menu-icon"></i>
-              <span class="menu-title">Sales report</span>
+            <a class="nav-link"  href={% url 'salesreport' %} aria-expanded="false" aria-controls="charts">
+              <i class="icon-bar-graph menu-icon"></i>
+              <span class="menu-title">Sales Report</span>
               <i class="menu-arrow"></i>
             </a>
-           
+            
           </li>
         </ul>
       </nav> 
