--- a/storeadmin/templates/storeadmin/index.html
+++ b/storeadmin/templates/storeadmin/index.html
@@ -346,12 +346,12 @@
             
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
-              <i class="icon-contract menu-icon"></i>
-              <span class="menu-title">Coupons</span>
+            <a class="nav-link"  href={% url 'coupon' %} aria-expanded="false" aria-controls="charts">
+              <i class="icon-bar-graph menu-icon"></i>
+              <span class="menu-title">Coupon</span>
               <i class="menu-arrow"></i>
             </a>
-           
+            
           </li>
           <li class="nav-item">
             <a class="nav-link"  href={% url 'salesreport' %} aria-expanded="false" aria-controls="charts">
